--- a/css/style.css
+++ b/css/style.css
@@ -366,21 +366,26 @@ img {
 .port-list {
     display: flex;
     flex-direction: row;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
     align-content: flex-start;
     gap: 48px 24px;
     flex-wrap: wrap;
 }
+.port-list-item {
+    border: 1px solid var(--color-cornflower);
+}
 
+.port-list-item:hover {
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
 .port-description {
     padding-top: 32px;
     padding-bottom: 32px;
     padding-right: 16px;
     padding-left: 16px;
     background-color: var(--color-white);
-    border: 1px solid var(--color-cornflower);
+    
 }
 .port-description-title {
     font-size: 20px;
